@@ -1,9 +1,9 @@
 package sequencer.core;
 
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -23,18 +23,19 @@ import org.junit.jupiter.api.Test;
  * Tests for the track.
  */
 public class TrackTest {
+
   private Track track;
 
   /**
    * Test initialization before any of the other tests run.
    */
   @BeforeAll
-  @DisplayName("Check that all fields in track are as expected after initialization")
+  @DisplayName("Test that all fields in track are as expected after initialization")
   public static void testConstructor() {
-    Track track = new Track();
-    assertEquals(0, track.getInstruments().size());
-    assertEquals(null, track.getTrackName());
-    assertEquals(null, track.getArtistName());
+    final Track track = new Track();
+    assertEquals(0, track.getInstrumentNames().size());
+    assertNull(track.getTrackName());
+    assertNull(track.getArtistName());
   }
 
   /**
@@ -52,82 +53,92 @@ public class TrackTest {
     }
 
     @Test
-    @DisplayName("Check setters/getters for trackName and artistName with legal and illegal input")
+    @DisplayName("Test setters/getters for trackName and artistName with legal and illegal input")
     public void testNameSetterAndGetters() {
 
-      String artistName = "Test Artist";
+      final String artistName = "Test Artist";
       track.setArtistName(artistName);
-      String actualArtistName = track.getArtistName();
+      final String actualArtistName = track.getArtistName();
       assertEquals(artistName, actualArtistName);
 
-      String trackName = "Test Track";
+      final String trackName = "Test Track";
       track.setTrackName(trackName);
-      String actualTrackName = track.getTrackName();
+      final String actualTrackName = track.getTrackName();
       assertEquals(trackName, actualTrackName);
 
-      String longName = "This is a very very very very very very very long name";
-      assertThrows(IllegalArgumentException.class, () -> track.setArtistName(longName), 
-          "Did not throw exception for too long artistName");
-      assertThrows(IllegalArgumentException.class, () -> track.setTrackName(longName), 
-          "Did not throw exception for too long trackName");
+      final String longName = "This is a very very very very very very very long name";
+      assertThrows(IllegalArgumentException.class, () -> track.setArtistName(longName),
+          "Did not throw IllegalArgumentException for too long artistName");
+      assertThrows(IllegalArgumentException.class, () -> track.setTrackName(longName),
+          "Did not throw IllegalArgumentException for too long trackName");
     }
 
     @Test
-    @DisplayName("Check addinstrument with and without pattern (legal and illegal)")
+    @DisplayName("Test addinstrument with and without pattern (legal and illegal)")
     public void testAddInstrument() {
-      String instrument = "instrument";
-      List<Boolean> legalPattern = new ArrayList<>(Arrays.asList(new Boolean[Track.TRACK_LENGTH]));
+      final String instrument = "instrument";
+      final List<Boolean> legalPattern =
+          new ArrayList<>(Arrays.asList(new Boolean[Track.TRACK_LENGTH]));
+
       Collections.fill(legalPattern, false);
-      List<Boolean> illegalPattern = 
+      final List<Boolean> illegalPattern =
           new ArrayList<>(Arrays.asList(new Boolean[Track.TRACK_LENGTH - 1]));
       Collections.fill(illegalPattern, false);
 
-      assertDoesNotThrow(() -> track.addInstrument(instrument), 
-          "Did not expect adding instrument without pattern to throw an exception");
-      assertDoesNotThrow(() -> track.addInstrument(instrument, legalPattern), 
-          "Did not expect adding instrument with legal pattern to throw an exception");
-      assertThrows(IllegalArgumentException.class, () -> track.addInstrument(instrument, null), 
+      track.addInstrument(instrument);
+      track.addInstrument(instrument, legalPattern);
+
+      assertThrows(IllegalArgumentException.class, () -> track.addInstrument(instrument, null),
           "Did not throw exception for adding instrument with patter=null");
-      assertThrows(IllegalArgumentException.class, 
-          () -> track.addInstrument(instrument, illegalPattern), 
+      assertThrows(IllegalArgumentException.class,
+          () -> track.addInstrument(instrument, illegalPattern),
           "Did not throw exception for adding instrument with illegal pattern");
     }
 
     @Test
-    @DisplayName("Check getInstruments")
+    @DisplayName("Test getInstruments")
     public void testInstrumentsGetter() {
-      List<String> instruments = new ArrayList<>(Arrays.asList("inst1", "inst2", "inst3"));
-      instruments.stream().forEach(instrument -> track.addInstrument(instrument));
-      List<String> actualInstruments = track.getInstruments();
+      final List<String> instruments = List.of("inst1", "inst2", "inst3");
+      instruments.stream().forEach(track::addInstrument);
+
+      final List<String> actualInstruments = track.getInstrumentNames();
       Collections.sort(actualInstruments);
+
       assertEquals(instruments, actualInstruments);
     }
 
     @Test
-    @DisplayName("Check getPattern with legal and illegal input")
+    @DisplayName("Test getPattern with legal and illegal input")
     public void testPatternGetter() {
-      String instrument = "instrument";
-      List<Boolean> pattern = new ArrayList<>(Arrays.asList(new Boolean[Track.TRACK_LENGTH]));
+      final int indexOfActiveSixteenth = 0;
+      final String instrument = "instrument";
+      final List<Boolean> pattern = new ArrayList<>(Arrays.asList(new Boolean[Track.TRACK_LENGTH]));
+
       Collections.fill(pattern, false);
-      pattern.set(8, true);
+      pattern.set(indexOfActiveSixteenth, true);
+
       track.addInstrument(instrument, pattern);
+
       assertTrue(
           IntStream.range(0, Track.TRACK_LENGTH)
-            .allMatch(index -> track.getPattern(instrument).get(index) == (index == 8)),
-            "Expected instrument only to be active during index 8");
-      assertThrows(IllegalArgumentException.class, () -> track.getPattern("not an instrument"), 
-          "Did not throw an exception for getting pattern for instrument not in track");
+              .allMatch(index -> (index == indexOfActiveSixteenth) == track.getPattern(instrument)
+                  .get(index)),
+          "Expected instrument only to be active during index " + indexOfActiveSixteenth);
+      assertThrows(IllegalArgumentException.class, () -> track.getPattern("not an instrument"), """
+          Did not throw an IllegalArgumentException for getting pattern for instrument not
+          in track""");
     }
   }
 
   /**
-   * Tests for more complex methods where the starting point for the tests is an already filled 
+   * Tests for more complex methods where the starting point for the tests is an already filled
    * track.
    */
   @Nested
   public class TestRemainingMethods {
+
     List<String> instruments = new ArrayList<>();
-    List<List<Boolean>> patterns = new ArrayList<>();
+    final List<List<Boolean>> patterns = new ArrayList<>();
 
     /**
      * Create an filled track before each test in this class.
@@ -136,9 +147,10 @@ public class TrackTest {
     public void createFilledTrack() {
       track = new Track();
       instruments = Arrays.asList("inst1", "inst2", "inst3");
+      Random random = new Random();
       instruments.stream().forEach((instrument) -> {
-        List<Boolean> pattern = new ArrayList<>(Arrays.asList(new Boolean[Track.TRACK_LENGTH]));
-        Random random = new Random();
+        final List<Boolean> pattern =
+            new ArrayList<>(Arrays.asList(new Boolean[Track.TRACK_LENGTH]));
         IntStream.range(0, pattern.size()).forEach(index -> {
           pattern.set(index, random.nextBoolean());
         });
@@ -148,41 +160,32 @@ public class TrackTest {
     }
 
     @Test
-    @DisplayName("Check removeInstrument with legal and illegal input")
+    @DisplayName("Test removeInstrument with legal and illegal input")
     public void testRemoveInstrument() {
-      assertThrows(IllegalArgumentException.class, () -> track.removeInstrument("finnes ikke"), 
-          "Did not throw exception when removing instrument that was not part of track");
-      assertTrue(track.getInstruments().contains(instruments.get(0)));
-      assertDoesNotThrow(() -> track.removeInstrument(instruments.get(0)), 
-          "Did not expect removing instrument to throw an exception");
-      assertFalse(track.getInstruments().contains(instruments.get(0)));
+      assertThrows(IllegalArgumentException.class, () -> track.removeInstrument("does not exist"),
+          """
+              Did not throw IllegalArgumentException when removing instrument that was not
+              part of track""");
+      assertTrue(track.getInstrumentNames().contains(instruments.get(0)));
+      track.removeInstrument(instruments.get(0));
+      assertFalse(track.getInstrumentNames().contains(instruments.get(0)));
     }
 
     @Test
-    @DisplayName("Check toggleSixteenth with legal and illegal input")
+    @DisplayName("Test toggleSixteenth with legal and illegal input")
     public void testToggleSixteenth() {
-      List<Boolean> pattern = patterns.get(0);
-      String instrument = instruments.get(0);
+      final List<Boolean> pattern = patterns.get(0);
+      final String instrument = instruments.get(0);
       assertEquals(pattern, track.getPattern(instrument));
       track.toggleSixteenth(instrument, 8);
       assertNotEquals(pattern, track.getPattern(instrument));
       pattern.set(8, !pattern.get(8));
       assertEquals(pattern, track.getPattern(instrument));
 
-      assertThrows(IllegalArgumentException.class, () -> track.toggleSixteenth(instrument, 20), 
-          "Did not throw exception when toggeling sixteenth with index out of bounds");
-    }
-  
-    @Test
-    @DisplayName("Check equals method")
-    public void testEquals() {
-      Track track2 = new Track();
-      IntStream.range(0, instruments.size()).forEach((index) -> {
-        track2.addInstrument(instruments.get(index), patterns.get(index));
-      });
-      assertTrue(track.equals(track2));
-      track2.removeInstrument(instruments.get(0));
-      assertFalse(track.equals(track2));
+      assertThrows(IllegalArgumentException.class,
+          () -> track.toggleSixteenth(instrument, Track.TRACK_LENGTH), """
+              Did not throw IllegalArgumentException when toggeling sixteenth with index
+              out of bounds""");
     }
   }
 }
